tinylang/TinyLangParser.py
# Generated from TinyLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TinyLangParser ( Parser ):

    grammarFileName = "TinyLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'return'", "'if'", "'else'", 
                     "'while'", "'func'", "'true'", "'false'", "'null'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<='", "'>='", "'<'", 
                     "'>'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", 
                     "'('", "')'", "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "LET", "RETURN", "IF", "ELSE", "WHILE", 
                      "FUNC", "TRUE", "FALSE", "NULL", "AND", "OR", "EQUAL", 
                      "BANGEQ", "LE", "GE", "LT", "GT", "ASSIGN", "PLUS", 
                      "MINUS", "STAR", "SLASH", "PERCENT", "NOT", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "COMMA", "SEMI", "FLOAT", 
                      "INT", "STRING", "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_functionDecl = 1
    RULE_paramList = 2
    RULE_block = 3
    RULE_statement = 4
    RULE_argList = 5
    RULE_expr = 6
    RULE_postfix = 7
    RULE_primary = 8

    ruleNames =  [ "program", "functionDecl", "paramList", "block", "statement", 
                   "argList", "expr", "postfix", "primary" ]

    EOF = Token.EOF
    LET=1
    RETURN=2
    IF=3
    ELSE=4
    WHILE=5
    FUNC=6
    TRUE=7
    FALSE=8
    NULL=9
    AND=10
    OR=11
    EQUAL=12
    BANGEQ=13
    LE=14
    GE=15
    LT=16
    GT=17
    ASSIGN=18
    PLUS=19
    MINUS=20
    STAR=21
    SLASH=22
    PERCENT=23
    NOT=24
    LPAREN=25
    RPAREN=26
    LBRACE=27
    RBRACE=28
    COMMA=29
    SEMI=30
    FLOAT=31
    INT=32
    STRING=33
    ID=34
    WS=35
    LINE_COMMENT=36
    BLOCK_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TinyLangParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.FunctionDeclContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.StatementContext,i)


        def getRuleIndex(self):
            return TinyLangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TinyLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 32397853678) != 0):
                self.state = 20
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [6]:
                    self.state = 18
                    self.functionDecl()
                    pass
                elif token in [1, 2, 3, 5, 7, 8, 9, 20, 24, 25, 27, 31, 32, 33, 34]:
                    self.state = 19
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(TinyLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(TinyLangParser.FUNC, 0)

        def ID(self):
            return self.getToken(TinyLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TinyLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TinyLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(TinyLangParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TinyLangParser.ParamListContext,0)


        def getRuleIndex(self):
            return TinyLangParser.RULE_functionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = TinyLangParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(TinyLangParser.FUNC)
            self.state = 28
            self.match(TinyLangParser.ID)
            self.state = 29
            self.match(TinyLangParser.LPAREN)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 30
                self.paramList()


            self.state = 33
            self.match(TinyLangParser.RPAREN)
            self.state = 34
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TinyLangParser.ID)
            else:
                return self.getToken(TinyLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TinyLangParser.COMMA)
            else:
                return self.getToken(TinyLangParser.COMMA, i)

        def getRuleIndex(self):
            return TinyLangParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = TinyLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(TinyLangParser.ID)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 37
                self.match(TinyLangParser.COMMA)
                self.state = 38
                self.match(TinyLangParser.ID)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(TinyLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TinyLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.StatementContext,i)


        def getRuleIndex(self):
            return TinyLangParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TinyLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(TinyLangParser.LBRACE)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 32397853614) != 0):
                self.state = 45
                self.statement()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(TinyLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(TinyLangParser.LET, 0)

        def ID(self):
            return self.getToken(TinyLangParser.ID, 0)

        def SEMI(self):
            return self.getToken(TinyLangParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(TinyLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(TinyLangParser.ExprContext,0)


        def RETURN(self):
            return self.getToken(TinyLangParser.RETURN, 0)

        def IF(self):
            return self.getToken(TinyLangParser.IF, 0)

        def LPAREN(self):
            return self.getToken(TinyLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TinyLangParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(TinyLangParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(TinyLangParser.WHILE, 0)

        def getRuleIndex(self):
            return TinyLangParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = TinyLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(TinyLangParser.LET)
                self.state = 54
                self.match(TinyLangParser.ID)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 55
                    self.match(TinyLangParser.ASSIGN)
                    self.state = 56
                    self.expr(0)


                self.state = 59
                self.match(TinyLangParser.SEMI)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(TinyLangParser.RETURN)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32263635840) != 0):
                    self.state = 61
                    self.expr(0)


                self.state = 64
                self.match(TinyLangParser.SEMI)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.match(TinyLangParser.IF)
                self.state = 66
                self.match(TinyLangParser.LPAREN)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(TinyLangParser.RPAREN)
                self.state = 69
                self.block()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 70
                    self.match(TinyLangParser.ELSE)
                    self.state = 71
                    self.block()


                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.match(TinyLangParser.WHILE)
                self.state = 75
                self.match(TinyLangParser.LPAREN)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(TinyLangParser.RPAREN)
                self.state = 78
                self.block()
                pass
            elif token in [7, 8, 9, 20, 24, 25, 31, 32, 33, 34]:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.expr(0)
                self.state = 81
                self.match(TinyLangParser.SEMI)
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TinyLangParser.COMMA)
            else:
                return self.getToken(TinyLangParser.COMMA, i)

        def getRuleIndex(self):
            return TinyLangParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = TinyLangParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.expr(0)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 87
                self.match(TinyLangParser.COMMA)
                self.state = 88
                self.expr(0)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TinyLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class UnaryExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(TinyLangParser.ExprContext,0)

        def NOT(self):
            return self.getToken(TinyLangParser.NOT, 0)
        def MINUS(self):
            return self.getToken(TinyLangParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return visitor.visitUnaryExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(TinyLangParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(TinyLangParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)

        def STAR(self):
            return self.getToken(TinyLangParser.STAR, 0)
        def SLASH(self):
            return self.getToken(TinyLangParser.SLASH, 0)
        def PERCENT(self):
            return self.getToken(TinyLangParser.PERCENT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExpr" ):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)


    class OrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)

        def OR(self):
            return self.getToken(TinyLangParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)


    class PostfixExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def postfix(self):
            return self.getTypedRuleContext(TinyLangParser.PostfixContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpr" ):
                return visitor.visitPostfixExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(TinyLangParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(TinyLangParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(TinyLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignExpr" ):
                return visitor.visitAssignExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualityExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)

        def EQUAL(self):
            return self.getToken(TinyLangParser.EQUAL, 0)
        def BANGEQ(self):
            return self.getToken(TinyLangParser.BANGEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpr" ):
                return visitor.visitEqualityExpr(self)
            else:
                return visitor.visitChildren(self)


    class RelationExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)

        def LT(self):
            return self.getToken(TinyLangParser.LT, 0)
        def LE(self):
            return self.getToken(TinyLangParser.LE, 0)
        def GT(self):
            return self.getToken(TinyLangParser.GT, 0)
        def GE(self):
            return self.getToken(TinyLangParser.GE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationExpr" ):
                return visitor.visitRelationExpr(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TinyLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ExprContext,i)

        def AND(self):
            return self.getToken(TinyLangParser.AND, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TinyLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = TinyLangParser.AssignExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 95
                self.match(TinyLangParser.ID)
                self.state = 96
                self.match(TinyLangParser.ASSIGN)
                self.state = 97
                self.expr(9)
                pass

            elif la_ == 2:
                localctx = TinyLangParser.UnaryExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 98
                _la = self._input.LA(1)
                if not(_la==20 or _la==24):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                self.expr(2)
                pass

            elif la_ == 3:
                localctx = TinyLangParser.PostfixExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 100
                self.postfix()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 121
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = TinyLangParser.OrExprContext(self, TinyLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 103
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 104
                        self.match(TinyLangParser.OR)
                        self.state = 105
                        self.expr(9)
                        pass

                    elif la_ == 2:
                        localctx = TinyLangParser.AndExprContext(self, TinyLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 106
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 107
                        self.match(TinyLangParser.AND)
                        self.state = 108
                        self.expr(8)
                        pass

                    elif la_ == 3:
                        localctx = TinyLangParser.EqualityExprContext(self, TinyLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 109
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 110
                        _la = self._input.LA(1)
                        if not(_la==12 or _la==13):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 111
                        self.expr(7)
                        pass

                    elif la_ == 4:
                        localctx = TinyLangParser.RelationExprContext(self, TinyLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 112
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 113
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 245760) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 114
                        self.expr(6)
                        pass

                    elif la_ == 5:
                        localctx = TinyLangParser.AddExprContext(self, TinyLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 115
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 116
                        _la = self._input.LA(1)
                        if not(_la==19 or _la==20):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 117
                        self.expr(5)
                        pass

                    elif la_ == 6:
                        localctx = TinyLangParser.MulExprContext(self, TinyLangParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 118
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 119
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14680064) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 120
                        self.expr(4)
                        pass

             
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PostfixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primary(self):
            return self.getTypedRuleContext(TinyLangParser.PrimaryContext,0)


        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(TinyLangParser.LPAREN)
            else:
                return self.getToken(TinyLangParser.LPAREN, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(TinyLangParser.RPAREN)
            else:
                return self.getToken(TinyLangParser.RPAREN, i)

        def argList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyLangParser.ArgListContext)
            else:
                return self.getTypedRuleContext(TinyLangParser.ArgListContext,i)


        def getRuleIndex(self):
            return TinyLangParser.RULE_postfix

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfix" ):
                return visitor.visitPostfix(self)
            else:
                return visitor.visitChildren(self)




    def postfix(self):

        localctx = TinyLangParser.PostfixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_postfix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.primary()
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 127
                    self.match(TinyLangParser.LPAREN)
                    self.state = 129
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if (((_la) & ~0x3f) == 0 and ((1 << _la) & 32263635840) != 0):
                        self.state = 128
                        self.argList()


                    self.state = 131
                    self.match(TinyLangParser.RPAREN) 
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TinyLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(TinyLangParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TinyLangParser.STRING, 0)
